[gd_scene load_steps=4 format=2]

[ext_resource path="res://Modules/menus/options_menu_parts/GraphicsSettingsContent.gd" type="Script" id=1]
[ext_resource path="res://Modules/menus/ui_sounds/UiSoundPack.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[node name="GraphicsSettingsContent" type="HSplitContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 995.0
margin_bottom = 507.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 255.0
margin_bottom = 500.0
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 117.0
margin_right = 255.0
margin_bottom = 137.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_top = 3.0
margin_right = 101.0
margin_bottom = 17.0
text = "Graphics Preset"

[node name="OptionPresets" type="OptionButton" parent="VBoxContainer/HBoxContainer3"]
margin_left = 105.0
margin_right = 255.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="UiSoundPack" parent="VBoxContainer/HBoxContainer3/OptionPresets" instance=ExtResource( 3 )]

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 141.0
margin_right = 255.0
margin_bottom = 173.0
rect_min_size = Vector2( 0, 32 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 177.0
margin_right = 255.0
margin_bottom = 201.0
alignment = 1

[node name="CheckFullscreen" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 14.0
margin_right = 108.0
margin_bottom = 24.0
text = "Fullscreen"

[node name="UiSoundPack3" parent="VBoxContainer/HBoxContainer/CheckFullscreen" instance=ExtResource( 3 )]

[node name="CheckRetroFilter" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 112.0
margin_right = 240.0
margin_bottom = 24.0
pressed = true
text = "Use Retro Filter"

[node name="UiSoundPack2" parent="VBoxContainer/HBoxContainer/CheckRetroFilter" instance=ExtResource( 3 )]

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 205.0
margin_right = 255.0
margin_bottom = 225.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 112.0
margin_bottom = 17.0
text = "MSAA Filter Level"

[node name="OptionMSAAFilter" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 116.0
margin_right = 255.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="UiSoundPack" parent="VBoxContainer/HBoxContainer2/OptionMSAAFilter" instance=ExtResource( 3 )]

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 229.0
margin_right = 255.0
margin_bottom = 323.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 248.0
margin_bottom = 87.0
alignment = 1

[node name="CheckGlow" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 241.0
margin_bottom = 24.0
text = "Glow Enabled"

[node name="UiSoundPack" parent="VBoxContainer/PanelContainer/VBoxContainer/CheckGlow" instance=ExtResource( 3 )]

[node name="CheckSSAO" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 241.0
margin_bottom = 52.0
text = "SSAO Enabled"

[node name="UiSoundPack2" parent="VBoxContainer/PanelContainer/VBoxContainer/CheckSSAO" instance=ExtResource( 3 )]

[node name="CheckSSR" type="CheckBox" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 241.0
margin_bottom = 80.0
text = "Screen Space Reflections Enabled"

[node name="UiSoundPack3" parent="VBoxContainer/PanelContainer/VBoxContainer/CheckSSR" instance=ExtResource( 3 )]

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 327.0
margin_right = 255.0
margin_bottom = 359.0
rect_min_size = Vector2( 0, 32 )

[node name="BtnApply" type="Button" parent="VBoxContainer"]
margin_top = 363.0
margin_right = 255.0
margin_bottom = 383.0
text = "Apply Settings"

[node name="UiSoundPack" parent="VBoxContainer/BtnApply" instance=ExtResource( 3 )]

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
margin_left = 267.0
margin_right = 988.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer"]
margin_left = 110.5
margin_right = 610.5
margin_bottom = 500.0
texture = ExtResource( 4 )
expand = true

[connection signal="pressed" from="VBoxContainer/BtnApply" to="." method="_on_BtnApply_pressed"]
